--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,24 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-ext {
-    configuration = [
-            package             : "app.outlay",
-            buildToolsVersion   : "25.0.3",
-            compileVersion      : 25,
-            minSdk              : 21,
-            targetSdk           : 25,
-            version_code        : 8,
-            version_name        : "1.2.2",
-    ]
-
-    libraries = [
-            supportVersion      : "25.3.1",
-            dagger              : "2.9",
-            rxjava              : "1.3.0",
-            rxandroid           : "1.1.0",
-            butterknife         : "7.0.1",
-            javax_annotation    : "10.0-b28",
-            circleimageview     : "2.0.0",
-            picasso             : "2.5.2",
-            greenDao            : "2.0.0",
-            firebase            : "10.2.6",
-    ]
-}
-
 buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
-        classpath 'com.google.gms:google-services:3.0.0'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+	repositories{
+		maven { url 'https://maven.fabric.io/public' }
+		jcenter()
+		google()
+	}
+	dependencies {
+		classpath 'com.android.tools.build:gradle:3.0.1'
+		classpath 'io.fabric.tools:gradle:1.21.6'
+		classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
+	}
 }
 
 allprojects {
     repositories {
-        jcenter()
-        mavenCentral()
+		maven { url "http://dl.bintray.com/populov/maven" }
+		maven { url 'https://maven.fabric.io/public' }
         maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
-        maven { url  "http://dl.bintray.com/dasar/maven" }
+		maven { url "http://JRAF.org/static/maven/2" }
+        jcenter()
+        google()
+        mavenCentral()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
