--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+MYAPP_RELEASE_STORE_FILE=debug.keystore
+MYAPP_RELEASE_KEY_ALIAS=androiddebugkey
+MYAPP_RELEASE_STORE_PASSWORD=android
+MYAPP_RELEASE_KEY_PASSWORD=android
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
